<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GoEV</string>
    <string name="login">Login</string>
    <string name="logo">Logo</string>
    <string name="loginDesc">Please sign in to continue.</string>
    <string name="email">Email</string>
    <string name="password">PASSWORD</string>
    <string name="forgotPassword">FORGOT PASSWORD</string>
    <string name="loginButtonText">LOGIN</string>
    <string name="loginToSign">Don\'t have an account?</string>
    <string name="loginToSign2">Sign up</string>
    <string name="createAccount">Create Account</string>
    <string name="fullname">FULL NAME</string>
    <string name="confirmPassword">CONFIRM PASSWORD</string>
    <string name="registerButtonText">SIGN UP</string>
    <string name="signToLogin">Already have an account?</string>
    <string name="signToLogin2">Sign in</string>
    <string name="settings">Settings</string>
    <string name="settingSearch" tools:ignore="TypographyEllipsis">Search for a setting...</string>
    <string name="notification">Notifications</string>
    <string name="privacy"><![CDATA[Privacy & Security]]></string>
    <string name="help"><![CDATA[Help & Support]]></string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="showNotifications">Show notifications</string>
    <string name="floatingNotifications">Floating notifications</string>
    <string name="lockScreenNotifications">Lock screen notifications</string>
    <string name="allowSound">Allow sound</string>
    <string name="allowVibration">Allow vibration</string>
    <string name="accountAndLogin">Account and login</string>
    <string name="deleteAccount">Delete account</string>
    <string name="privacyPolicy">GoEV Privacy Policy</string>
    <string name="helpAndSupport"><![CDATA[Help & Support]]></string>
    <string name="quickContact">QUICK CONTACT</string>
    <string name="name">Name*</string>
    <string name="enterFullName">Enter Full Name Here</string>
    <string name="contactEmail">Email*</string>
    <string name="enterEmailAddress">Enter Email Address</string>
    <string name="contactMessage">Message*</string>
    <string name="enterMessage" tools:ignore="TypographyEllipsis">Enter your message here...</string>
    <string name="contactSend">Send</string>
    <string name="stillCantSolve">Still can\'t solve problem?</string>
    <string name="callUsNow">Call us now</string>
    <string name="commentHere" tools:ignore="TypographyEllipsis">Comment Here...</string>
    <string name="feedbackSubmit">Submit</string>
    <string name="aboutGoEV">About GoEV</string>
    <string name="GoEVDescription">     GoEV is a cutting-edge technology company that is leading the charge in the electric vehicle revolution. With a mission to encourage the adoption of electric vehicles and reduce carbon emissions, GoEV has developed an innovative app that makes it easy for people to make the switch to electric.
        Founded in 2018 by a team of passionate entrepreneurs, GoEV has quickly become a recognized leader in the industry. ce, GoEV is poised to help accelerate the adoption of electric vehicles and drive positive change in the transportation industry.</string>
    <string name="fullName">Full name</string>
    <string name="passwordLowerCase">Password</string>
    <string name="privacyPolicyTitle">Privacy Policy</string>
    <string name="GoEVPrivacyPolicy">Privacy Policy for GoEV GoEV is committed to protecting the privacy and security of our users</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="deleteUser">Delete Account</string>
    <string name="confirm">Confirm</string>
    <string name="myProfile">My Profile</string>
    <string name="profileName">Profile name</string>
    <string name="editProfile">Edit Profile</string>
    <string name="postHistory">Post History</string>
    <string name="myPost">My Post</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="logOut">Log Out</string>
    <string name="yourInformation">Your Information</string>
    <string name="phoneNumber">Phone (+60)</string>
    <string name="done">Done</string>
    <string name="editPicture">Edit Picture</string>
    <string name="userName">Username</string>
    <string name="changePassword">Change Password</string>
    <string name="changeUserName">Change Username</string>
    <string name="changeEmail">Change Email</string>
    <string name="previousPassword">PREVIOUS PASSWORD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tips_and_knowledge">TipsAndKnowledge</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="confirm_delete_comment">Confirm delete the comment? Once delete cannot be recovered.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="save">Save</string>
    <string name="confirm_delete_post">Confirm delete the post? Once delete cannot be undone.</string>
    <string name="tracker">Tracker</string>
    <string name="action_search">search</string>
    <string name="user_profile">user profile</string>
    <string name="user_profile_content_description">User Profile</string>
    <string name="list_view">List view</string>
    <string name="list_view_content_description">List view</string>
    <string name="map_view">Map view</string>
    <string name="map_view_content_description">Map view</string>
    <string name="searchbar_hint">Find a station or address</string>
    <string name="tracker_fab_content_desc">Add charging station</string>
    <string name="fragment_add_station_label">Adding charging station location</string>
    <string name="charging_station_name_label">Name</string>
    <string name="charging_station_address_label">Address</string>
    <string name="name_helper_text">Name of charging station</string>
    <string name="address_helper_text">Address of charging station</string>
    <string name="add_charging_station_btn_text">Add</string>
    <string name="cancel_add_btn_text">Cancel</string>
    <string name="error_add_message">Please fill out all fields.</string>
    <string name="edit_btn_text">Edit</string>
    <string name="view_station_extended_fab_content_desc">Navigate to charging station address</string>
    <string name="view_station_extended_fab_label">Navigate</string>
    <string name="fragment_view_station_label" />
    <string name="save_charging_station_btn_text">Save</string>
    <string name="fragment_edit_station_label">Editing charging station location</string>
    <string name="delete_all_content_description">Delete All</string>
    <string name="action_delete_all_title">Delete All</string>
    <string name="delete_content_description">Delete</string>
    <string name="action_delete_title">Delete</string>
    <string name="delete_dialog_title">Confirm deletion?</string>
    <string name="delete_supporting_text">Are you sure you want to delete this charging station location? This action is undoable.</string>
    <string name="decline">No</string>
    <string name="accept">Yes</string>
    <string name="delete_all_dialog_title">Confirm delete all?</string>
    <string name="delete_all_supporting_text">Are you sure you want to delete all tracked charging stations? This action is undoable.</string>
    <string name="delete_all_success_msg">Successfully deleted all charging stations.</string>
    <string name="no_google_maps_message">Google maps not installed.</string>
    <string name="add_img_btn_text">Add image</string>
    <string name="edit_image_btn_text">Edit image</string>
    <string name="image_edit_success_msg">Image edit successful.</string>
    <string name="img_add_success_msg">Image uploaded successfully.</string>
    <string name="edit_success_msg">Successfully edited charging station.</string>
    <string name="empty_field_helper_msg">Empty Field</string>
    <string name="id_validation_msg">Valid id is not passed in.</string>
    <string name="google_maps_uri_template">geo:0,0?q=%s</string>
    <string name="web_google_maps_uri_template">https://www.google.com/maps/search/?api=1&amp;query=%s"</string>
    <string name="delete_success_msg">"Successfully deleted: %s"</string>
    <string name="add_success_msg">Successfully added charging station.</string>
    <string name="tips_and_knowledge">Tips and Knowledge</string>
    <string name="forum">Forum</string>
    <string name="addPost">addPost</string>
    <string name="searchPost">Search Post</string>
    <string name="go_ev">GoEV</string>
</resources>