<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

<!--    <item-->
<!--        android:id="@+id/edit"-->
<!--        android:title="Edit"-->
<!--        android:contentDescription="Content description edit"-->
<!--        app:showAsAction="ifRoom" />-->

<!--    <item android:id="@+id/action_search"-->
<!--        android:title="@string/action_search"-->
<!--        android:icon="@drawable/search_logo"-->
<!--        app:showAsAction="ifRoom|collapseActionView"-->
<!--        app:actionViewClass="androidx.appcompat.widget.SearchView" />-->

<!--    <item-->
<!--        android:id="@+id/favorite"-->
<!--        android:icon="@drawable/test_nav_icon"-->
<!--        android:title="Favourite"-->
<!--        android:contentDescription="content description favourite"-->
<!--        app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_view_list"
        android:title="@string/list_view"
        android:icon="@drawable/ic_view_list"
        android:contentDescription="@string/list_view_content_description"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_view_map"
        android:title="@string/map_view"
        android:icon="@drawable/ic_view_list"
        android:contentDescription="@string/map_view_content_description"
        app:showAsAction="never" />

    <item
        android:id="@+id/userInfo"
        android:title="@string/user_profile"
        android:icon="@drawable/ic_account_circle"
        android:contentDescription="@string/user_profile_content_description"
        app:showAsAction="always" />

</menu>