<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/trackerFragment"
        android:enabled="true"
        android:icon="@drawable/ic_tracker"
        android:title="@string/tracker"/>
    <item
        android:id="@+id/tipsAndKnowledge"
        android:enabled="true"
        android:icon="@drawable/ic_tips_and_knowledge"
        android:title="@string/tips_and_knowledge"/>
    <item
        android:id="@+id/forumMainPageFragment"
        android:enabled="true"
        android:icon="@drawable/ic_forum"
        android:title="@string/forum"/>
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>