<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".register.RegisterFragment">

        <ImageView
            android:id="@+id/registerLogo"
            android:layout_width="348dp"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/go_ev" />

        <TextView
            android:id="@+id/registerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="-10dp"
            android:text="@string/createAccount"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerLogo" />

        <EditText
            android:id="@+id/editRegisterName"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerText" />

        <EditText
            android:id="@+id/editRegisterEmail"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editRegisterName" />

        <EditText
            android:id="@+id/editRegisterPassword"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editRegisterEmail" />

        <EditText
            android:id="@+id/editRegisterPassword2"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:ems="10"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editRegisterPassword" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:text="@string/registerButtonText"
            android:textColor="@android:color/black"
            app:backgroundTint="@color/md_theme_dark_onPrimaryContainer"
            app:icon="@drawable/baseline_arrow_forward_24"
            app:iconTint="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editRegisterPassword2" />

        <TextView
            android:id="@+id/signToLoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/signToLogin"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.43"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/signToLoginText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="15dp"
            android:clickable="true"
            android:text="@string/signToLogin2"
            android:textColor="#37E1EC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/signToLoginText" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>