<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Settings_help">

        <TextView
            android:id="@+id/helpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/helpAndSupport"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="500dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            app:cardBackgroundColor="@color/md_theme_dark_onSecondaryContainer"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helpTitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/quickContact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/quickContact"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/contactNameTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/quickContact" />

                <EditText
                    android:id="@+id/editTextContactName"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:ems="10"
                    android:hint="@string/enterFullName"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/contactNameTitle" />

                <TextView
                    android:id="@+id/contactEmailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/contactEmail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextContactName" />

                <EditText
                    android:id="@+id/editTextContactEmail"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:ems="10"
                    android:hint="@string/enterEmailAddress"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/contactEmailTitle" />

                <TextView
                    android:id="@+id/contactMessageTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="25dp"
                    android:text="@string/contactMessage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextContactEmail" />

                <EditText
                    android:id="@+id/editTextContactMessage"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/enterMessage"
                    android:inputType="textMultiLine"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/contactMessageTitle" />

                <Button
                    android:id="@+id/sendMessageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/contactSend"
                    android:textColor="@android:color/black"
                    app:backgroundTint="@color/md_theme_dark_onPrimaryContainer"
                    app:icon="@drawable/baseline_arrow_forward_24"
                    app:iconTint="@android:color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextContactMessage" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/contactToCallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/stillCantSolve"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/contactToCallText2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="15dp"
            android:text="@string/callUsNow"
            android:textColor="#37E1EC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/contactToCallText" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>